gitops/apps/payments/overlays/local/payments-local.yaml
---
# Source: payments/templates/1-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-canary
  namespace: demo
spec:
  selector:
    app: payments
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
      name: http
---
# Source: payments/templates/1-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-stable
  namespace: demo
spec:
  selector:
    app: payments
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
      name: http
---
# Source: payments/templates/4-serviceMonitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-metrics
  namespace: demo
  labels:
    app: payments
    metrics: "true"
spec:
  selector:
    app: payments
  ports:
    - name: metrics
      port: 9468
      targetPort: 9468
      protocol: TCP
---
# Source: payments/templates/11-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: payments
  namespace: demo
spec:
  replicas: 1
  revisionHistoryLimit: 1

  selector:
    matchLabels:
      app: payments

  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: payments
        istio: monitor

    spec:
      containers:
        - name: payments
          image: "devopsflow999/payments:main-v0.1.4"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3005
              protocol: TCP
            - name: metrics
              containerPort: 9468
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi

  strategy:
      canary:
        stableService: payments-stable
        canaryService: payments-canary

        trafficRouting:
          istio:
            virtualService:
              name: payments-vsvc
              routes:
                - primary
        steps:
          - setWeight: 10
          - setWeight: 20
          - pause:
              duration: 20s
          - setWeight: 30
          - pause:
              duration: 20s
          - setWeight: 40
          - pause:
              duration: 20s
          - setWeight: 50
          - pause:
              duration: 20s
          - setWeight: 60
          - pause:
              duration: 20s
          - setWeight: 70
          - pause:
              duration: 20s
          - setWeight: 80
          - pause:
              duration: 20s
          - setWeight: 90
          - pause:
              duration: 20s
---
# Source: payments/templates/2-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: payments-vsvc
  namespace: demo
spec:
  hosts:
    - "api.localdev.me"
  gateways:
    - "api-gateway"
  http:

    # Canary route
    - name: payments-canary-debug
      match:
        - uri:
            prefix: "/payments/"
          headers:
            x-canary:
              exact: "true"
        - uri:
            prefix: "/payments"
          headers:
            x-canary:
              exact: "true"
      route:
        - destination:
            host: payments-canary
            port:
              number: 3005
          weight: 100
      # corsPolicy:
      #   allowOrigins:
      #     - exact: "http://frontend.localdev.me"
      #   allowMethods: ["GET","POST","PUT","DELETE","OPTIONS"]
      #   allowHeaders: ["*"]
      #   allowCredentials: true
      #   maxAge: "1h"

    # Stable route
    - name: primary
      match:
        - uri:
            prefix: "/payments/"
        - uri:
            exact: "/payments"
        - uri:
            prefix: "/payments"
        - uri:
            exact: "/payments"
      route:
        - destination:
            host: payments-stable
            port:
              number: 3005
          weight: 100
        - destination:
            host: payments-canary
            port:
              number: 3005
          weight: 0
      # corsPolicy:
      #   allowOrigins:
      #     - exact: "http://frontend.localdev.me"
      #   allowMethods: ["GET","POST","PUT","DELETE","OPTIONS"]
      #   allowHeaders: ["*"]
      #   allowCredentials: true
      #   maxAge: "1h"
